--- a/agreements.html
+++ b/agreements.html
@@ -1,8 +1,52 @@
-<meta charset="UTF-8"/>
-<pre>
-<p>arrow là một ứng dụng cho phép người dùng có thể điều khiển các thiết bị đã cài đặt Phần mềm Arrow.<br/><br/>
-                Trang chủ arrow: <a class="link external" href="https://arrow.nstudio.pw">https://arrow.nstudio.pw</a><br/>
-                Trang chủ nstudio: <a class="link external" href="https://nstudio.pw">https://nstudio.pw</a><br/><br/><br/>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Điều Khoản, chính sách</title>
+	<link rel="stylesheet" href="agreements.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Agreements</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Somethings else
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="alert alert-success" role="alert">
+		<h4>Thông tin ứng dụng</h4>
+		<p>Arrow là một ứng dụng cho phép người dùng có thể điều khiển các thiết bị đã cài đặt Phần mềm Arrow.<br/><br/>
+    <p class="mb-0"> Trang chủ Arrow: <a class="link external" href="#">Updating</a><br/></p>
+    <p class="mb-0"> Trang chủ MinProducer Studio <a class="link external" href=http://minproducer.studio>https://minproducer.studio</a><br/><br/><br/></p>
+</p></div>
+
+<div class="container">
 <h1>Điều khoản sử dụng và thỏa thuận<h1><br/>
 <h2>1. CAM KẾT</h2><br/>
 <h3>1.1 CAM KẾT DỮ LIỆU</h3><br/>
@@ -28,6 +72,7 @@ arrow sử dụng Internet với mục đích truyền tải dữ liệu và gia
 •   Lịch sử duyệt web của Thiết bị (mã hóa cá nhân)<br/>
 •   Ảnh chụp màn hình (mã hóa cá nhân)<br/>
 •   Thông tin cơ bản của Thiết bị (Tên, IP, hệ điều hành, phiên bản hệ điều hành)<br/>
+
 <h4>1.4.2   Hình thức kết nối</h4><br/>
 arrow sử dụng giao thức HTTP (GET,  POST) để giao tiếp với máy chủ trên cả ba hình thức Ứng dụng, Website và Phần mềm.<br/>
 Các giao thức được bảo mật (HTTPS) theo chuẩn của trình duyệt.<br/>
@@ -65,4 +110,10 @@ Hệ thống cá nhân hay hệ điệu hành được cài đặt trên Thiết
 <h4>2.3.3   Quy định về hệ thống máy chủ</h4><br/>
 Hệ thống máy chủ được quản lí và vận hành bởi Nhà phát triển. Mọi hành vi khai thác, chiếm quyền hoặc trục lợi đều bị xem là phạm pháp.<br/>
             </p>
-</pre>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+</body>
+</html>
+
