Edit agreements + index

--- a/index.html
+++ b/index.html
@@ -392,14 +392,14 @@
             <div class="row align-items-center">
                 <div class="col-md-8">
                     <ul class="d-flex nav justify-content-center justify-content-md-start">
-                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Policy</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://minproducer.studio">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="http://blog.minproducer.studio">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="agreements.html">Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/minproducer99">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <p>All © Copyright by <a href="https://nstudio.pw">NorthStudio</a>. All Rights Reserved.</p>
+                    <p>All © Copyright by <a href="https://minproducer.studio">MinProducer.Studio</a>. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
