--- a/agreements.html
+++ b/agreements.html
@@ -16,33 +16,12 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Somethings else
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
   </div>
 </nav>
 <div class="alert alert-success" role="alert">
 		<h4>Thông tin ứng dụng</h4>
 		<p>Arrow là một ứng dụng cho phép người dùng có thể điều khiển các thiết bị đã cài đặt Phần mềm Arrow.<br/><br/>
-    <p class="mb-0"> Trang chủ Arrow: <a class="link external" href="#">Updating</a><br/></p>
+    <p class="mb-0"> Trang chủ Arrow: <a class="link external" href="https://web.minproducer.studio">Arrow</a><br/></p>
     <p class="mb-0"> Trang chủ MinProducer Studio <a class="link external" href=http://minproducer.studio>https://minproducer.studio</a><br/><br/><br/></p>
 </p></div>
 
