--- a/panel/index.html
+++ b/panel/index.html
@@ -213,7 +213,7 @@
 				</div>
 				<div style="padding-bottom:16px;"> </div>
 				<div class="row">
-					<a style="color:white; display:block;margin-left:auto;margin-right:auto;" href="#">Chính sách bảo mật & thỏa thuận sử dụng arrow.</a>
+					<a style="color:white; display:block;margin-left:auto;margin-right:auto;" href="../agreements.html">Chính sách bảo mật & thỏa thuận sử dụng arrow.</a>
 				</div>
 			</div>
 		</div>
